# ComfyUI-mrv2

./: INSTALL.md  NODES.md  README.txt  pyproject.toml
.github/workflows/: publish.yml
draw/: mrv2_annotations_image.py
save/: mrv2_save_exr_image.py
