[project]
name = "comfyui-mrv2"
description = "NODES:mrv2 Save EXR Image, mrv2 Annotations Image Node"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["openexr", "pillow"]

[project.urls]
Repository = "https://github.com/ggarra13/ComfyUI-mrv2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ggarra13"
DisplayName = "ComfyUI-mrv2"
Icon = ""
