[project]
name = "comfyui-mrv2"
description = "Nodes to interact with the mrv2 player"
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["openexr", "pillow"]

[project.urls]
Repository = "https://github.com/ggarra13/ComfyUI-mrv2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ggarra13"
DisplayName = "ComfyUI-mrv2"
Icon = ""
